@@ -312,6 +312,14 @@ class QueryPage {
 				}
 	
 				$wgOut->addWikiText( $cacheNotice );
+				
+				# If updates on this page have been disabled, let the user know
+				# that the data set won't be refreshed for now
+				global $wgDisableQueryPageUpdate;
+				if( is_array( $wgDisableQueryPageUpdate ) && in_array( $this->getName(), $wgDisableQueryPageUpdate ) ) {
+					$wgOut->addWikiText( wfMsg( 'querypage-no-updates' ) );
+				}
+				
 			}
 
 		}
